added category images

--- a/css/style.css
+++ b/css/style.css
@@ -180,4 +180,4 @@ nav ul a:hover {
     bottom: 65px;
     z-index: 100;
   }
-/******************************************************************************/
+****************************************************************************
