--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
-
+/* html *{
+    font-family: 'Pacifico', cursive;
+    text-transform: capitalize;
+    letter-spacing: 0.05rem;
+} */
 /* customized container width to 90% ******************************************/
 .container {
     margin: 0 auto;
@@ -52,6 +56,7 @@ nav .brand-logo {
 /* customized navbar text colors **********************************************/
 nav ul li a{
     color: black;
+    font-size: 1.3rem;
   }
 /******************************************************************************/
 
@@ -83,14 +88,6 @@ nav ul a:hover {
 /******************************************************************************/
 
 /* divider *********************************************************************/
-.divider-left {
-    padding-left: 5%;
-}
-
-.divider-right{
-    padding-right: 5%;
-}
-
 .lable-divider {
     width: 100%;
     margin-left: auto;
@@ -112,6 +109,7 @@ nav ul a:hover {
 }
 
 .lable-divider-content span {
+    font-size: 1.7rem !important;
     display: block;
     white-space: nowrap;
     padding: 12px 25px;
@@ -124,8 +122,10 @@ nav ul a:hover {
 /******************************************************************************/
 
 /* card title and subtitles ***************************************************/
+
 .card-title{
-    background: #fff;
+    background-color: rgba(255, 255, 255, .5);
+    width: fit-content;
     display: block;
     position: absolute !important;
     line-height: 1;
@@ -138,9 +138,48 @@ nav ul a:hover {
     transform: translate(-50%,-50%);
     font-size: 1.2rem !important;
 }
-.card-sub-title{    
+.blur-title-overlay{
+    
+    display: block;
+    position: absolute !important;
+    line-height: 1;
+    margin: 0;
+    padding: 15px 15px 30px 15px !important;
+    top: 50%;
+    left: 50% !important;
+    bottom: 50% !important;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    font-size: 1.2rem !important;
+    z-index: 0;
+    -webkit-filter: blur(5px);
+    filter: blur(5px);
+    filter: blur(5px); /* Firefox 35+, eventually all */
+    background-repeat:no-repeat;
+	background-size: cover;
+    overflow: hidden;   
+}
+
+.card-sub-title{
+    display: none;    
     font-size: 1rem !important;
 }
+.card .card-content {
+    padding: 0px;
+}
+.collection .collection-item.avatar {
+    min-height: 60px;
+}
+.collection .collection-item {
+    line-height: 2.5rem;
+}
+.collection a.collection-item {
+    color: #9e9e9e;
+}
+.secondary-content{
+    color:#9e9e9e;
+}
+
 /******************************************************************************/
 
 /* slider and indicators ******************************************************/
@@ -160,10 +199,14 @@ nav ul a:hover {
 }
 .slider .slides li .caption {
     left: 10%;
+    top: 35%;
 }
 .inner-outline {
     outline: 2px solid rgba(255, 255, 255, .8);
     outline-offset: -40px;
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .slider .indicators .indicator-item {
     background-color: #eee;
@@ -180,4 +223,4 @@ nav ul a:hover {
     bottom: 65px;
     z-index: 100;
   }
-****************************************************************************
+/* **************************************************************************** */
